# imagefil

./: CMakeLists.txt  README.md
cuda/: imsc.sh  makefile
cuda/src/: filter_kernel.cu  image.c
mpi/: imsc.sh  makefile
mpi/src/: filter.c  filter.h  image.c  main.c
openmp/: imsc.sh  makefile
openmp/src/: filter.h  image.c  image.h
single_process/: imsc.sh
single_process/src/: filter.c  main.c
src/cuda/: filter.c  filter.h  main.c
src/mpi/: image.h
src/openmp/: filter.c
src/single_process/: filter.h  makefile
